[package]
name = "merkleized-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
array-bytes = { version = "6.2.2", default-features = false }
blake3 = { version = "1.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.9", features = [ "derive" ], default-features = false }
frame-metadata = { version = "16.0.0", features = [ "current" ], default-features = false }
scale-decode = { version = "0.13.0", default-features = false }
scale-info = { version = "2.10.0", default-features = false }

[features]
default = [ "std" ]
std = [
    "blake3/std",
    "codec/std",
    "frame-metadata/std",
    "scale-decode/std",
    "scale-info/std",
]
