[package]
name = "fuzzer"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
honggfuzz = { git = "https://github.com/rust-fuzz/honggfuzz-rs.git" }
merkleized-metadata = { path = ".." }
frame-metadata = { version = "*", features = [ "current" ] }
codec = { package = "parity-scale-codec", version = "3.7.4", features = [ "derive" ] }
array-bytes = "9.1.2"
clap = { version = "4.5.35", features = [ "derive" ] }
blake3 = { version = "1.8.1", default-features = false }

[workspace]
